# repomap-core

./: .env.example  .env.op  .gitignore  .kilocodeignore  .kilocodemodes  AGENTS.md  LICENSE  PROJECT_INTENT.md  README.md  pyproject.toml  repomap.toml
.beads/: .gitignore  README.md  beads.left.jsonl  beads.left.meta.json  config.yaml  issues.jsonl  metadata.json  routes.jsonl  sync-state.json
.beads/formulas/: decompose-epic.formula.json  discover-phase.formula.json  execute-subtask.formula.json  execute-task.formula.json  explore-phase.formula.json  prepare-phase.formula.json  respond-to-pr-review.formula.json  start-task.formula.json
.github/workflows/: quality-gates.yml
.kilocode/: AUTO_APPROVAL_SETTINGS.md  ENV_SETUP.md  README.md  README_MIGRATION.md  commands.toml  gate_runs.jsonl  mcp.json  mode-card-map.json
.kilocode/checkpoints/: 1ax.2-pour-and-dispatch.md  1ax.3-e2e-loop-test.md  README.md  (+2 more)
.kilocode/tools/: bd  (+21 more)
.repomap/: calls.jsonl  calls_raw.jsonl  deps.edgelist  deps_summary.json  integrations_static.jsonl  modules.jsonl  refs.jsonl  symbols.jsonl
daemon/: eslint.config.js  package-lock.json  package.json  tsconfig.json
docs/: productization-assessment.md  roadmap-plant-infrastructure.md
optimization/: README.md  __init__.py  assertions.py  card_exit.py  classifier.py  compiler.py  dolt_bus.py  fitter_signatures.py  metrics.py  run_compilation.py  smoke.py  training_data.py
plans/: punch-card-schema.sql  roadmap-plant-infrastructure.md
src/: cli.py  utils.py
tests/: conftest.py  test_artifact_contents_from_fixture.py  test_artifact_generators_filelist_parity.py  test_calls_raw.py  test_cli_query.py  test_cli_smoke.py  test_compute_layer_violations.py  test_config_strict_validation.py  test_contract_validation.py  test_import_boundary_no_monorepo.py  test_layer_enforcement_dogfood.py  test_layers_rules.py  test_module_naming_canonical.py  test_refs_calls.py  test_refs_summary_builder.py  test_scan_symlink_escape.py  test_verify_determinism.py
(+303 files in other folders)
