[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repomap-core"
version = "0.1.0"
description = "Core deterministic scanning, parsing, and artifact generation for repomap."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.10.0",
    "orjson>=3.10.0",
    "gitignore-parser>=0.1.11",
    "tree-sitter>=0.23.6",
    "tree-sitter-python>=0.23.6",
]

[project.optional-dependencies]
# Tooling needed to run the deterministic quality gates locally/CI.
# Kept optional so the core library remains lightweight.
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
]

[project.scripts]
repomap = "cli:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src/artifacts",
    "src/contract",
    "src/graph",
    "src/parse",
    "src/rules",
    "src/scan",
    "src/verify",
]
include = ["src/cli.py", "src/utils.py"]
